log/build_2026-05-13_12-15-46/my_offboard_ctrl/stderr.log
  File "/home/yangdrone/ws_ros2/install/my_offboard_ctrl/lib/python3.10/site-packages/my_offboard_ctrl/drone_unified.py", line 355
    parts = raw.split("
                      ^
SyntaxError: unterminated string literal (detected at line 355)

